--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -58,7 +58,7 @@
         android:layout_marginStart="40dp"
         android:ems="8"
         android:hint="Bill amount"
-        android:hintTextColor="#78909C"
+        android:textColorHint="#78909C"
         android:inputType="numberDecimal"
         android:textSize="24sp"
         app:layout_constraintBottom_toBottomOf="@id/tvBaseLabel"
